Descripción de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título de tu Página</title>
+    <title>VGM WEB PAGE VIN A GIT</title>
     <link rel="stylesheet" href="styles.css"> <!-- Puedes agregar CSS más adelante -->
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi Página Web</h1>
+        <h1>Bienvenido a mi Página Web PARA DEV F</h1>
     </header>
     <main>
-        <p>Este es un párrafo de ejemplo.</p>
+        <p>Este es un párrafo de ejemplo VGM.</p>
         <img src="ruta/a/tu/imagen.jpg" alt="Descripción de la imagen">
         <a href="https://www.ejemplo.com">Visitar Ejemplo</a>
     </main>
