Descripción de los cambios agrege imagen

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <main>
         <p>Este es un párrafo de ejemplo VGM.</p>
         <img src="ruta/a/tu/imagen.jpg" alt="Descripción de la imagen">
-        <a href="https://www.ejemplo.com">Visitar Ejemplo</a>
+        <a href="https://www.ejemplo.com">Visitar Ejemplo  VGM </a>
     </main>
     <footer>
-        <p>Derechos reservados © 2024</p>
+        <p>Derechos reservados © 2024 VGM</p>
     </footer>
 </body>
 </html>
