Actualizando index.html con la imagen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <p>Este es un párrafo de ejemplo VGM.</p>
-        <img src="ruta/a/tu/imagen.jpg" alt="Descripción de la imagen">
+        <img src="imagen1.jpg" alt="Descripción de la imagen">
         <a href="https://www.ejemplo.com">Visitar Ejemplo  VGM </a>
     </main>
     <footer>
